fixed the header spacing issue as well as fixed the issue of source wise searching not working for the users.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4434,5 +4434,4 @@ input#search::-ms-input-placeholder { /* IE 10+ */
 input#search::-moz-placeholder { /* Firefox 18- */
   color: pink;
 }
-
-
+ul#mobile-demo li{margin-right: 5px;}
